# claude-external-repl-commands

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  regression.js  smoke-test.js
.github/workflows/: ci.yml
lib/: host.js  pipe.js  registry.js  send.js
native/: Cargo.toml  index.js  stage.cjs  test-addon.cjs
native/src/: lib.rs  unix.rs  windows.rs
scripts/: fetch-prebuilds.mjs
