[package]
name = "eclaude-pty"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_Security",
  "Win32_Storage_FileSystem",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
